--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 		<li>Leer
 			<ul>
 				<li>Cuentos</li>
-				<li>Cómics</li>
+				<li><a href="http://www.neilgaiman.com/Cool_Stuff/Essays/Essays_About_Neil/The_Sandman_Summary">Cómics</a></li>
 				<li>Novelas</li>
-				<li>Mangas</li>
-							</ul>
+				<li><a href="http://noticias.otakucenter.es/index.php/manga/resenas/2838-resena-manga-pesadillas-de-katsuhiro-otomo">Mangas</a></li>
+			</ul>
 		</li>
 		<li>Escuchar a mis músicos favoritos:
 			<ul>
-				<li>BIGBANG</li>
-				<li>Breakbot</li>
-				<li>Mika</li>
-				<li>Joe Hisaishi</li>
+				<li><a href="https://www.youtube.com/watch?v=2GRP1rkE4O0">BIGBANG</a></li>
+				<li><a href="https://www.youtube.com/watch?v=yssSGN58t00">Breakbot</a></li>
+				<li><a href="https://www.youtube.com/watch?v=RVmG_d3HKBA">Mika</a></li>
+				<li><a href="https://www.youtube.com/watch?v=X9mGQU7rGGM>Joe Hisaishi</a></li>
 			</ul>
 		</li>
 		<li>Aprender cosas nuevas</li>
